# ConstructGL

./: CMakeLists.txt  README.md
include/core/: Application.h
include/renderer/: Shader.h
src/: main.cpp
src/core/: Application.cpp
